--- a/src/app/components/sales/goods-voucher/goods-voucher.component.html
+++ b/src/app/components/sales/goods-voucher/goods-voucher.component.html
@@ -128,7 +128,7 @@
                                         <tr *ngFor="let item of deliveryVouchers">
                                             <td>{{representatives[item.id]?.userName}}</td>
 
-                                            <td>{{clients[item.id]?.name}}</td>
+                                            <!-- <td>{{Name.name}}</td> -->
                                             <td>Fiona Green</td>
                                             <td>San Francisco</td>
                                             
