--- a/src/app/components/stock/stock/unit-category/unit-category.component.html
+++ b/src/app/components/stock/stock/unit-category/unit-category.component.html
@@ -151,22 +151,17 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>Fiona Green</td>
-                        <td>Chief Operating Officer (COO)</td>
-                        <td>San Francisco</td>
-                        <td>48</td>
-                        <td>2010/03/11</td>
-                        <td>$850,000</td>
+                      <tr *ngFor="let item of storesSec">
+                        <td>{{item.note}}</td>
+                        <td></td>
+                        <td></td>
+                        <td>{{item.localName}}</td>
+                        <td>{{item.name}}</td>
+                        <td>                          
+                          <input type="checkbox" class="large-checkbox" />
+                        </td>
                       </tr>
-                      <tr>
-                        <td>Shou Itou</td>
-                        <td>Regional Marketing</td>
-                        <td>Tokyo</td>
-                        <td>20</td>
-                        <td>2011/08/14</td>
-                        <td>$163,000</td>
-                      </tr>
+                  
                     </tbody>
                   </table>
                 </div>
@@ -200,7 +195,7 @@
         </h5>
       </div>
       <div class="modal-body">
-        <form>
+        <form [formGroup]="unitCatForm" (ngSubmit)="onSubmitAdd()">
           <div class="container">
             <!-- Row with two fields -->
             <div class="row">
@@ -210,7 +205,7 @@
                   <input
                     type="text"
                     id="field1"
-                    
+                    formControlName="name"
                     class="form-control custom-input"
                     placeholder="اسم فئه الوحده"
                   />
@@ -224,7 +219,7 @@
                   <input
                     type="text"
                     id="field2"
-                    
+                    formControlName="localName"
                     class="form-control custom-input"
                     placeholder="Unit Category"
                   />
@@ -285,13 +280,14 @@
                   <label for="field1 text-end">وصف فئه الوحده</label>
                   <textarea
                     class="form-control custom-input"
+                    formControlName="note"
                     id="Textarea1"
                     rows="3"
                   ></textarea>
                 </div>
               </div>
             </div>
-
+            <div class="col-md-6 mx-auto ">
             <button type="button my-button3" class="btn my-button3">
               حفظ
             </button>
@@ -303,6 +299,7 @@
             >
               الغاء
             </button>
+            </div>
           </div>
         </form>
       </div>
