--- a/src/app/components/projects-and-contracts/projects/projects.component.html
+++ b/src/app/components/projects-and-contracts/projects/projects.component.html
@@ -1081,17 +1081,14 @@
                 </div>
             </div>
 
-            <button type="button my-button3" class="btn my-button3">
-              <i class="fa-solid fa-plus"></i>اضافه
-            </button>
-
-            <button
-              type="button"
-              class="btn closebutton"
-              data-bs-dismiss="modal"
-            >
-              الغاء
-            </button>
+            <div class="col-md-6 mx-auto ">
+              <button type="submit" class="btn my-button3">
+                اضافه
+                <i class="fa-solid fa-plus"></i>
+              </button>
+              <button type="button" class="btn closebutton " data-bs-dismiss="modal">
+                الغاء
+              </button></div>
           </div>
         </form>
       </div>
@@ -1270,17 +1267,17 @@
 
       </div>
       <div class="modal-footer">
-          <button type="button my-button3" class="btn my-button3">
-              <i class="fa-solid fa-plus"></i>اضافه
-            </button>
-          <button
-          type="button"
-          class="btn closebutton"
-          data-bs-dismiss="modal"
-        >
-          الغاء
-        </button>          
-      </div>
+        <button type="button my-button3" class="btn my-button3">
+            <i class="fa-solid fa-plus"></i>اضافه
+          </button>
+        <button
+        type="button"
+        class="btn closebutton"
+        data-bs-dismiss="modal"
+      >
+        الغاء
+      </button>          
+    </div>
     </div>
   </div>
 </div>
