--- a/src/app/components/sales/goods-voucher/goods-voucher.component.html
+++ b/src/app/components/sales/goods-voucher/goods-voucher.component.html
@@ -116,7 +116,7 @@
                                         <tr class="firstcol">
                                             <th>المندوب</th>
                                             <th>العميل</th>
-                                            <th>تاريخ الانشاء</th>
+                                            <th>الكود</th>
                                             <th>المنشأ</th>
                                             <th>تاريخ الانشاء</th>
                                             <th class="firstcolright">
@@ -126,12 +126,10 @@
                                     </thead>
                                     <tbody>
                                         <tr *ngFor="let item of deliveryVouchers">
-                                            <td>{{representatives[item.id]?.userName}}</td>
-
-                                            <!-- <td>{{Name.name}}</td> -->
-                                            <td>Fiona Green</td>
-                                            <td>San Francisco</td>
-                                            
+                                            <td>,;lkj</td>
+                                            <td>mlmk</td>
+                                            <td>{{item.code}}</td>
+                                            <td>{{cliName}}</td>
                                             <td>{{item.id}}</td>
                                             <td> <input type="checkbox" class="large-checkbox" />
                                             </td>
