--- a/src/app/components/projects-and-contracts/contracts/contracts.component.html
+++ b/src/app/components/projects-and-contracts/contracts/contracts.component.html
@@ -205,28 +205,20 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
+                      <tr *ngFor="let item of contracts">
                         <td></td>
 
-                        <td>Fiona Green</td>
-                        <td>Chief Operating Officer (COO)</td>
-                        <td>San Francisco</td>
-                        <td>San Francisco</td>
-                        <td>48</td>
-                        <td>2010/03/11</td>
-                        <td>$850,000</td>
+                        <td>{{item.teamId}}</td>
+                        <td>{{item.assignedToId}}</td>
+                        <td>{{item.clientId}}</td>
+                        <td>{{item.singleInstallments}}</td>
+                        <td>{{item.localName}}</td>
+                        <td>{{item.name}}</td>
+                        <td class="firstcolright">
+                          <input type="checkbox" class="large-checkbox" />
+                        </td>
                       </tr>
-                      <tr>
-                        <td></td>
-
-                        <td>Shou Itou</td>
-                        <td>Regional Marketing</td>
-                        <td>Tokyo</td>
-                        <td>San Francisco</td>
-                        <td>20</td>
-                        <td>2011/08/14</td>
-                        <td>$163,000</td>
-                      </tr>
+                  
                     </tbody>
                   </table>
                 </div>
@@ -322,17 +314,17 @@
         </h5>
       </div>
       <div class="modal-body">
-        <form>
+        <form [formGroup]="contractForm" (ngSubmit)="onSubmit()">
           <div class="container">
             <!-- Row with two fields -->
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="field1 text-end"> اسم العقد</label>
+                  <label for="name text-end"> اسم العقد</label>
                   <input
                     type="text"
-                    id="field1"
-                    formControlName="field1"
+                    id="name"
+                    formControlName="name"
                     class="form-control custom-input"
                     placeholder="اسم العقد"
                   />
@@ -343,8 +335,8 @@
                   <label for="field2 text-end">اسم العقد باللغه المحليه </label>
                   <input
                     type="text"
-                    id="field2"
-                    formControlName="field2"
+                    id="localName"
+                    formControlName="localName"
                     class="form-control custom-input"
                     placeholder="Contract Name"
                   />
@@ -355,14 +347,11 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label for="field1 text-end">العميل </label>
-                  <input
-                    type="text"
-                    id="field3"
-                    
-                    class="form-control custom-input"
-                    placeholder="قم باختيار العميل "
-                  />
+                  <label for="clientId">العميل</label>
+                  <select id="clientId" formControlName="clientId" class="form-select form-control">
+                    <option  value=""  disabled selected>قم باختيار العميل</option>
+                    <option *ngFor="let item of clients" [value]="item.id">{{item.name}}</option>
+                  </select>
                 </div>
               </div>
             </div>
@@ -370,26 +359,20 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="field1 text-end">موكل إلي</label>
-                  <input
-                    type="text"
-                    id="field1"
-                    formControlName="field1"
-                    class="form-control custom-input"
-                    placeholder="قم باختيار المستخدم"
-                  />
+                  <label for="assignedToId">موكل الى </label>
+                  <select id="assignedToId" formControlName="assignedToId" class="form-select form-control">
+                    <option  value=""  disabled selected>قم باختيار موكل الى </option>
+                    <option *ngFor="let item of users" [value]="item.id">{{item.userName}}</option>
+                  </select>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="field2 text-end">فريق</label>
-                  <input
-                    type="text"
-                    id="field2"
-                    formControlName="field2"
-                    class="form-control custom-input"
-                    placeholder="قم باختيار الفريق"
-                  />
+                  <label for="teamId">الفريق </label>
+                  <select id="teamId" formControlName="teamId" class="form-select form-control">
+                    <option  value=""  disabled selected>قم باختيار الفريق </option>
+                    <option *ngFor="let item of teams" [value]="item.id">{{item.name}}</option>
+                  </select>
                 </div>
               </div>
             </div>
@@ -397,13 +380,37 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label for="field1 text-end">المستخدمين</label>
+                  <label for="userIds">المستخدمين </label>
+                  <select id="userIds" formControlName="userIds" class="form-select form-control">
+                    <option  value=""  disabled selected>قم باختيار المستخدمين </option>
+                    <option *ngFor="let item of users" [value]="item.id">{{item.userName}}</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="startDate text-end">تاريخ البدء</label>
                   <input
-                    type="text"
-                    id="field3"
-                    
+                    type="date"
+                    id="startDate"
+                    formControlName="startDate"
                     class="form-control custom-input"
-                    placeholder="قم باختيار المستخدم"
+                    placeholder="قم باختيار التاريخ"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="endDate text-end"> تاريخ الانتهاء </label>
+                  <input
+                    type="date"
+                    id="endDate"
+                    formControlName="endDate"
+                    class="form-control custom-input"
+                    placeholder="قم باختيار التاريخ"
                   />
                 </div>
               </div>
@@ -412,38 +419,11 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="field1 text-end">تاريخ البدء</label>
-                  <input
-                    type="date"
-                    id="field2"
-                    formControlName="field2"
-                    class="form-control custom-input"
-                    placeholder="قم باختيار التاريخ"
-                  />
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="field2 text-end"> تاريخ الانتهاء </label>
-                  <input
-                    type="date"
-                    id="field2"
-                    formControlName="field2"
-                    class="form-control custom-input"
-                    placeholder="قم باختيار التاريخ"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="field1 text-end">رقم العقد</label>
+                  <label for="code text-end">رقم العقد</label>
                   <input
                     type="text"
-                    id="field1"
-                    formControlName="field1"
+                    id="code"
+                    formControlName="code"
                     class="form-control custom-input"
                     placeholder="قم باختبار رقم العقد"
                   />
@@ -455,13 +435,14 @@
                   <input
                     type="text"
                     id="field2"
-                    formControlName="field2"
+                    disabled
                     class="form-control custom-input"
                     placeholder="قم باختيار حاله العقد"
                   />
                 </div>
               </div>
             </div>
+
 
             <div class="scroll-buttons-container">
               <button
@@ -589,7 +570,7 @@
                       <input
                         type="text"
                         id="field1"
-                        formControlName="field1"
+                       
                         class="form-control custom-input"
                         placeholder="قم باختبار النوع"
                       />
@@ -601,7 +582,7 @@
                       <input
                         type="text"
                         id="field2"
-                        formControlName="field2"
+                       
                         class="form-control custom-input"
                         placeholder="قم باختيار التكلفه"
                       />
@@ -629,7 +610,7 @@
                       <input
                         type="text"
                         id="field1"
-                        formControlName="field1"
+                       
                         class="form-control custom-input"
                         placeholder="نعم ام لا "
                       />
@@ -644,7 +625,7 @@
                       <input
                         type="text"
                         id="field1"
-                        formControlName="field1"
+                       
                         class="form-control custom-input"
                         placeholder="قم باختبار المشروع"
                       />
@@ -656,7 +637,7 @@
                       <input
                         type="text"
                         id="field2"
-                        formControlName="field2"
+                       
                         class="form-control custom-input"
                         placeholder="قم باختيارالمعدات"
                       />
@@ -794,7 +775,7 @@
                   <div class="form-group">
                       <label for="field7 text-end">النماذج
                       </label>
-                      <input type="text" id="field7" formControlName="field7"
+                      <input type="text" id="field7"
                           class="form-control" placeholder="مؤشر الأداء الرئيسي 1" />
                   </div>
               </div>
@@ -808,7 +789,7 @@
           <div class="row">
             <div class="col-md-9">
                 <div class="form-group">
-                    <input type="text" id="field7" formControlName="field7"
+                    <input type="text" id="field7"
                         class="form-control" placeholder="مؤشر الأداء الرئيسي 2" />
                 </div>
             </div>
@@ -1134,17 +1115,14 @@
                 </div>
             </div>
 
-            <button type="button my-button3" class="btn my-button3">
-              <i class="fa-solid fa-plus"></i>اضافه
-            </button>
-
-            <button
-              type="button"
-              class="btn closebutton"
-              data-bs-dismiss="modal"
-            >
-              الغاء
-            </button>
+            <div class="col-md-6 mx-auto ">
+              <button type="submit" class="btn my-button3">
+                اضافه
+                <i class="fa-solid fa-plus"></i>
+              </button>
+              <button type="button" class="btn closebutton " data-bs-dismiss="modal">
+                الغاء
+              </button></div>
           </div>
         </form>
       </div>
@@ -1380,18 +1358,14 @@
           </div>
   
         </div>
-        <div class="modal-footer">
-            <button type="button my-button3" class="btn my-button3">
-                <i class="fa-solid fa-plus"></i>اضافه
-              </button>
-            <button
-            type="button"
-            class="btn closebutton"
-            data-bs-dismiss="modal"
-          >
+        <div class="col-md-6 mx-auto ">
+          <button type="submit" class="btn my-button3">
+            اضافه
+            <i class="fa-solid fa-plus"></i>
+          </button>
+          <button type="button" class="btn closebutton " data-bs-dismiss="modal">
             الغاء
-          </button>          
-        </div>
+          </button></div>
       </div>
     </div>
   </div>
