--- a/src/app/components/sales/collections/collections.component.html
+++ b/src/app/components/sales/collections/collections.component.html
@@ -127,13 +127,13 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let item of collections">
                                             <td> </td>
                                             <td>Fiona Green</td>
                                             <td>Chief Operating Officer (COO)</td>
                                             <td>San Francisco</td>
                                             <td>48</td>
-                                            <td>2010/03/11</td>
+                                            <td>{{item.n}}</td>
                                             <td> <input type="checkbox" class="large-checkbox" />
                                             </td>
                                         </tr>
