--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -299,8 +299,8 @@
                       <li><a routerLink="/typeCategory"><span class="sub-item">فئة الصنف</span></a></li>
                       <li><a href="#"><span class="sub-item">الأصناف</span></a></li>
                       <li><a routerLink="/brands"><span class="sub-item">الماركات</span></a></li>
-                      <li><a routerLink="/boxAndCommitment"><span class="sub-item">مجموعة الصنف</span></a></li>
-                      <li><a routerLink="/groupCategory"><span class="sub-item">نوع الصنف</span></a></li>
+                      <li><a routerLink="/groupCategory"><span class="sub-item">مجموعة الصنف</span></a></li>
+                      <li><a routerLink="/itemType"><span class="sub-item">نوع الصنف</span></a></li>
                       <li><a href="#"><span class="sub-item">حركة المخزن</span></a></li>
                     </ul>
                   </div>
