--- a/src/app/components/stock/categories/category-group/category-group.component.html
+++ b/src/app/components/stock/categories/category-group/category-group.component.html
@@ -150,22 +150,17 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td>Fiona Green</td>
-                          <td>Chief Operating Officer (COO)</td>
-                          <td>San Francisco</td>
-                          <td>48</td>
-                          <td>2010/03/11</td>
-                          <td>$850,000</td>
+                        <tr *ngFor="let item of storesSec">
+                          <td>{{item.note}}</td>
+                        <td></td>
+                        <td></td>
+                          <td>{{item.localName}}</td>
+                          <td>{{item.name}}</td>
+                          <td>
+                            <input type="checkbox" class="large-checkbox" />
+                          </td>
                         </tr>
-                        <tr>
-                          <td>Shou Itou</td>
-                          <td>Regional Marketing</td>
-                          <td>Tokyo</td>
-                          <td>20</td>
-                          <td>2011/08/14</td>
-                          <td>$163,000</td>
-                        </tr>
+                    
                       </tbody>
                     </table>
                   </div>
@@ -203,7 +198,7 @@
           </h5>
         </div>
         <div class="modal-body">
-          <form>
+          <form [formGroup]="GroupForm" (ngSubmit)="onSubmitAdd()">
             <div class="container">
               <!-- Row with two fields -->
               <div class="row">
@@ -213,7 +208,7 @@
                     <input
                       type="text"
                       id="field1"
-                      
+                      formControlName="name"
                       class="form-control custom-input"
                       placeholder="اسم مجموعه الصنف"
                     />
@@ -227,7 +222,7 @@
                     <input
                       type="text"
                       id="field2"
-                      
+                      formControlName="localName"
                       class="form-control custom-input"
                       placeholder="Item group "
                     />
@@ -308,6 +303,7 @@
                     <label for="field1 text-end">وصف مجموعه المنتج</label>
                     <textarea
                       class="form-control custom-input"
+                      formControlName="note"
                       id="Textarea1"
                       rows="3"
                     ></textarea>
@@ -316,7 +312,7 @@
               </div>
 
               
-  
+              <div class="col-md-6 mx-auto ">
               <button type="button my-button3" class="btn my-button3">
                 حفظ
                 
@@ -329,6 +325,7 @@
               >
                 الغاء
               </button>
+              </div>
             
        
     
